Revert "Fix header positioning - add padding-top to prevent overlap"
This reverts commit 73189371c6925787741c2303f27fbd2b8ce92ce2.

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -29,7 +29,6 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  padding-top: 50px;
 }
 
 header {
@@ -170,7 +169,7 @@ main {
     width: 100%;
   }
   .search-input input {
-    padding: 8px;
+    padding: 5px;
   }
   .language div {
     font-size: 12px;
